[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Tejash. This is my First Webapp.
+            Hi! I am Tejash. This is my First Webapp.<br><br><br><hr>
+            I have created a Community Forum website eas a test project
+            go to /cforum to access the sit
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
