[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,8 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Tejash. This is my First Webapp.<br><br><br><hr>
-            I have created a Community Forum website eas a test project
-            go to /cforum to access the sit
+          <p>  I have created a Community Forum website as a test project
+            go to /cforum to access the site </p>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
