[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Tejash. This is my First Webapp.<br><br><br><hr>
-         <small><p>  I have created a Community Forum website as a test project
-            go to /cforum to access the site </p></small>
+            Hi! I am Tejash. This is my First Webapp.<br><hr>
+         <small><p>  I have created a Community Forum website as a test project.<br>
+            Go to /cforum to access the site </p></small>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
