--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Tejash. This is my First Webapp.<br><hr>
          <small><p>  I have created a Community Forum website as a test project.<br>
-            Go to http://tejashbhanusali2.imad.hasura-app.io/cforum to access the site </p></small>
+            Go to <a href="http://tejashbhanusali2.imad.hasura-app.io/cforum"> http://tejashbhanusali2.imad.hasura-app.io/cforum </a> to access the site </p></small>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
