[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,11 @@
         </div>
         <br>
         <div class="center text-para bold">
-            Hi! I am Tejash. This is my First Webapp.<br><hr>To see my profile visit <a href="http://tejashbhanusali2.imad.hasura-app.io/profile"> http://tejashbhanusali2.imad.hasura-app.io/profile </a>  <br><hr>
-         <small><p>  I have created a Community Forum website as a test project.<br>
-            Go to <a href="http://tejashbhanusali2.imad.hasura-app.io/cforum"> http://tejashbhanusali2.imad.hasura-app.io/cforum </a> to access the site </p></small>
+            Hi! I am Tejash. This is my First Webapp.
+            <br><hr>
+            To see my profile visit <a href="http://tejashbhanusali2.imad.hasura-app.io/profile"> http://tejashbhanusali2.imad.hasura-app.io/profile </a>  <br><hr>
+            I have created a Community Forum website as a test project.<br>
+            Go to <a href="http://tejashbhanusali2.imad.hasura-app.io/cforum"> http://tejashbhanusali2.imad.hasura-app.io/cforum </a> to access the site 
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
