[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <title>Hasura Student Site</title>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
@@ -11,9 +12,9 @@
         <div class="center text-para bold">
             Hi! I am Tejash. This is my First Webapp.
             <br><hr><br>
-            To see my profile visit <a href="http://tejashbhanusali2.imad.hasura-app.io/profile"> http://tejashbhanusali2.imad.hasura-app.io/profile </a>  <br><hr> <br>
+            To see my profile visit <a href="http://tejashbhanusali2.imad.hasura-app.io/profile"> http://tejashbhanusali2.imad.hasura-app.io/profile </a> <br> <br><hr> <br>
             I have created a Community Forum website as a test project.<br>
-            Go to <a href="http://tejashbhanusali2.imad.hasura-app.io/cforum"> http://tejashbhanusali2.imad.hasura-app.io/cforum </a> to access the site <br><hr>
+            Go to <a href="http://tejashbhanusali2.imad.hasura-app.io/cforum"> http://tejashbhanusali2.imad.hasura-app.io/cforum </a> to access the site <br> <br><hr><br>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
